[gd_scene format=3 uid="uid://dxqc4k2x5w47"]

[ext_resource type="Script" uid="uid://bvlvcp7fkm8qg" path="res://scripts/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control" unique_id=305990296]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1259805313]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1623104650]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=225612108]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer" unique_id=545172741]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MIMIC MANSION"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1727601216]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1468159627]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1155409074]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Continue"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=2097654408]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1043003485]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
